--- a/app/src/main/res/layout/activity_experience_sampling2.xml
+++ b/app/src/main/res/layout/activity_experience_sampling2.xml
@@ -370,6 +370,96 @@
                 -->
 
                 <TextView
+                    android:id="@+id/reasonableSwitch"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginTop="20dp"
+                    android:background="@drawable/onside_border"
+                    android:padding="@dimen/header_padding"
+                    android:textSize="@dimen/header_text_size"
+                    android:text="@string/reasonable_switch"
+                    android:textColor="@color/dark_grey" />
+
+
+                <SeekBar
+                    android:id="@+id/seekBarReasonable"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:max="4"
+                    android:layout_marginTop="5dp"
+                    android:thumbTint="@color/transparent"
+                    android:minHeight="3dp"
+                    android:maxHeight="3dp"
+                    android:progressDrawable="@drawable/seekbar_style"
+                    android:progress="0"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginBottom="@dimen/rating_container_margin_bottom"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/reasonable_strongly_disagree"
+                        android:layout_width="@dimen/radio_button_text_width"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="@dimen/radio_button_text_weight"
+                        android:layout_marginLeft="12dp"
+                        android:textSize="@dimen/rating_label"
+                        android:textStyle="bold"
+                        android:textColor="@color/dark_grey"
+                        android:text="@string/strongly_disagree" />
+
+                    <TextView
+                        android:id="@+id/reasonable_disagree"
+                        android:layout_width="@dimen/radio_button_text_width"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="@dimen/radio_button_text_weight"
+                        android:layout_marginLeft="12dp"
+                        android:textSize="@dimen/rating_label"
+                        android:textStyle="bold"
+                        android:textColor="@color/dark_grey"
+                        android:text="@string/disagree" />
+
+                    <TextView
+                        android:id="@+id/reasonable_neutral"
+                        android:layout_width="@dimen/radio_button_text_width"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="@dimen/radio_button_text_weight"
+                        android:layout_marginLeft="12dp"
+                        android:textSize="@dimen/rating_label"
+                        android:textStyle="bold"
+                        android:textColor="@color/dark_grey"
+                        android:text="@string/neutral" />
+
+                    <TextView
+                        android:id="@+id/reasonable_agree"
+                        android:layout_width="@dimen/radio_button_text_width"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="@dimen/radio_button_text_weight"
+                        android:layout_marginLeft="12dp"
+                        android:textSize="@dimen/rating_label"
+                        android:textStyle="bold"
+                        android:textColor="@color/dark_grey"
+                        android:text="@string/agree" />
+
+                    <TextView
+                        android:id="@+id/reasonable_strongly_agree"
+                        android:layout_width="@dimen/radio_button_text_width"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="@dimen/radio_button_text_weight"
+                        android:layout_marginLeft="12dp"
+                        android:textSize="@dimen/rating_label"
+                        android:textStyle="bold"
+                        android:textColor="@color/dark_grey"
+                        android:text="@string/strongly_agree" />
+                </LinearLayout>
+
+
+
+                <TextView
                     android:id="@+id/user_location"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -474,46 +564,8 @@
                     </LinearLayout>
                 </RadioGroup>
 
-                <TextView
-                    android:id="@+id/fingerprint_error_text"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="5dp"
-                    android:textSize="@dimen/header_text_size"
-                    android:background="@drawable/onside_border"
-                    android:padding="@dimen/header_padding"
-                    android:text="@string/fingerprint_error_text"
-                    android:textColor="@color/dark_grey" />
 
-                <RadioGroup
-                    android:id="@+id/fingerprint_error_button_group"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:padding="5dp"
-                    android:paddingBottom="0dp">
 
-                <RadioButton
-                    android:id="@+id/fingerprint_error_true"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="@dimen/radio_button_textsize"
-                    android:text="@string/true_text"
-                    android:textColor="@color/dark_grey"
-                    android:layout_marginRight="@dimen/radio_button_text_margin_left"
-                    android:onClick="onFingerErrorRadioButtonClicked"
-                    />
-
-                <RadioButton
-                    android:id="@+id/fingerprint_error_false"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="@dimen/radio_button_textsize"
-                    android:text="@string/false_text"
-                    android:textColor="@color/dark_grey"
-                    android:onClick="onFingerErrorRadioButtonClicked"
-                    />
-                </RadioGroup>
 
 
                 <!--<TextView
@@ -658,7 +710,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="right"
                     android:layout_gravity="right"
-                    android:orientation="vertical">
+                    android:orientation="horizontal">
 
                     <ImageView
                         android:id="@+id/send_button"
