--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,5 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="init_survey_btn_padding_left">40dp</dimen>
+    <dimen name="init_survey_btn_text_size">12sp</dimen>
 </resources>
