--- a/app/src/main/res/layout/activity_experience_sampling.xml
+++ b/app/src/main/res/layout/activity_experience_sampling.xml
@@ -69,6 +69,16 @@
                     android:layout_height="wrap_content"
                     android:textSize="@dimen/radio_button_textsize"
                     android:text="@string/false_text"
+                    android:layout_marginRight="@dimen/radio_button_text_margin_left"
+                    android:textColor="@color/dark_grey"
+                    android:onClick="onSwitchButtonClicked"
+                    />
+                <RadioButton
+                    android:id="@+id/lockswitch_dontremember"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/radio_button_textsize"
+                    android:text="@string/do_not_remember"
                     android:textColor="@color/dark_grey"
                     android:onClick="onSwitchButtonClicked"
                     />
@@ -121,13 +131,18 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="@dimen/radio_button_textsize"
-                    android:text="Weiß nicht"
+                    android:text="@string/dont_know"
                     android:textColor="@color/dark_grey"
                     android:onClick="onFingerErrorRadioButtonClicked"
                     />
             </RadioGroup>
 
 
+            <LinearLayout
+                android:id="@+id/predictionSeekbarContainer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
             <TextView
                 android:id="@+id/prediction_precision"
                 android:layout_width="match_parent"
@@ -222,60 +237,124 @@
                 android:textColor="@color/dark_grey"
                 android:textSize="@dimen/radio_button_textsize" />
 
-            <!--
-            <RadioGroup
+        </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/reasonCheckboxContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:padding="5dp">
+                >
 
-                <RadioButton
-                    android:id="@+id/radio_prediction_strong_agree"
+
+            <TextView
+                android:id="@+id/fingererror_reason"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:background="@drawable/onside_border"
+                android:padding="@dimen/header_padding"
+                android:text="@string/fingererror_reason"
+                android:textColor="@color/dark_grey"
+                android:textSize="@dimen/header_text_size" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:onClick="onPredictionRadioButtonClicked"
-                    android:text="@string/strongly_agree"
+                    android:layout_weight="0.5"
+                    android:orientation="vertical">
 
-                    android:textColor="@color/dark_grey" />
+                    <CheckBox
+                        android:id="@+id/rain_checkbox"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:buttonTint="@color/teal"
+                        android:text="@string/rain_reason"
+                        android:textColor="@color/dark_grey"
+                        android:onClick="onCheckboxClicked"/>
 
-                <RadioButton
-                    android:id="@+id/radio_prediction_agree"
+                    <CheckBox
+                        android:id="@+id/snow_checkbox"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:buttonTint="@color/teal"
+                        android:text="@string/snow_reason"
+                        android:textColor="@color/dark_grey"
+                        android:onClick="onCheckboxClicked"/>
+
+                    <CheckBox
+                        android:id="@+id/humidity_checkbox"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:buttonTint="@color/teal"
+                        android:text="@string/humidity_reason"
+                        android:textColor="@color/dark_grey"
+                        android:onClick="onCheckboxClicked"/>
+
+                    <CheckBox
+                        android:id="@+id/heat_checkbox"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:buttonTint="@color/teal"
+                        android:text="@string/heat_reason"
+                        android:textColor="@color/dark_grey"
+                        android:onClick="onCheckboxClicked"/>
+
+                </LinearLayout>
+
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:onClick="onPredictionRadioButtonClicked"
-                    android:text="@string/agree"
+                    android:layout_weight="0.5"
 
-                    android:textColor="@color/dark_grey" />
+                    android:orientation="vertical">
 
-                <RadioButton
-                    android:id="@+id/radio_prediction_neutral"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:onClick="onPredictionRadioButtonClicked"
-                    android:text="@string/neutral"
+                    <CheckBox
+                        android:id="@+id/wetfingers_checkbox"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:buttonTint="@color/teal"
+                        android:text="@string/wet_reason"
+                        android:textColor="@color/dark_grey"
+                        android:onClick="onCheckboxClicked"/>
 
-                    android:textColor="@color/dark_grey" />
+                    <CheckBox
+                        android:id="@+id/dirtyfingers_checkbox"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:buttonTint="@color/teal"
+                        android:text="@string/dirty_finger_reason"
+                        android:textColor="@color/dark_grey"
+                        android:onClick="onCheckboxClicked"/>
 
-                <RadioButton
-                    android:id="@+id/radio_prediction_disagree"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:onClick="onPredictionRadioButtonClicked"
-                    android:text="@string/disagree"
+                    <CheckBox
+                        android:id="@+id/cooking_checkbox"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:buttonTint="@color/teal"
+                        android:text="@string/cooking_reason"
+                        android:textColor="@color/dark_grey"
+                        android:onClick="onCheckboxClicked" />
+                </LinearLayout>
+            </LinearLayout>
 
-                    android:textColor="@color/dark_grey" />
-
-                <RadioButton
-                    android:id="@+id/radio_prediction_strong_disagree"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:onClick="onPredictionRadioButtonClicked"
-                    android:text="@string/strongly_disagree"
-
-                    android:textColor="@color/dark_grey" />
-            </RadioGroup>
-            -->
+            <EditText
+                android:id="@+id/reasonDefaultEdittext"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:backgroundTint="@color/dark_grey"
+                android:hint="something else"
+                android:inputType="text"
+                android:textColor="@color/dark_grey"
+                android:textSize="@dimen/radio_button_textsize" />
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/annoyance_level"
