--- a/app/src/main/res/layout/lockout_view.xml
+++ b/app/src/main/res/layout/lockout_view.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:background="@color/semitransparent_black">
+    android:background="@color/transparent_black">
 
     <TextView
         android:id="@+id/lockout_countdown"
