--- a/app/src/main/res/layout/activity_experience_sampling.xml
+++ b/app/src/main/res/layout/activity_experience_sampling.xml
@@ -26,6 +26,9 @@
         android:background="@drawable/bg">
 
 
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -868,7 +871,7 @@
 
 
         </LinearLayout>
-
+        </ScrollView>
     </RelativeLayout>
 
 </RelativeLayout>
