--- a/app/src/main/res/layout/activity_experience_sampling2.xml
+++ b/app/src/main/res/layout/activity_experience_sampling2.xml
@@ -26,7 +26,9 @@
         android:background="@drawable/bg">
 
 
-
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -732,7 +734,7 @@
 
 
             </LinearLayout>
-
+            </ScrollView>
 
     </RelativeLayout>
 
