--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,20 +20,38 @@
         android:orientation="vertical"
         android:background="@drawable/color_gradient"></LinearLayout>
 
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginBottom="200dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_alignParentBottom="true">
     <EditText
         android:id="@+id/set_id_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="20dp"
-        android:layout_marginBottom="200dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_alignParentBottom="true"
         android:backgroundTint="@color/teal"
         android:textCursorDrawable="@null"
         android:inputType="number"
         android:textSize="@dimen/edit_text_size"
         android:hint="@string/set_id"/>
+
+    <Button
+        android:id="@+id/set_user_id_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/button_color_gradient"
+        android:textColor="@color/white"
+        android:layout_margin="2dp"
+        android:textSize="@dimen/button_text_size"
+        android:padding="2dp"
+        style="?android:attr/buttonBarButtonStyle"
+        android:text="@string/enter_id" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -68,20 +86,13 @@
             android:layout_weight="@dimen/button_weight"
             style="?android:attr/buttonBarButtonStyle"
             android:text="@string/stop_tracking" />
-
-        <Button
-            android:id="@+id/set_user_id_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/button_color_gradient"
-            android:textColor="@color/white"
-            android:layout_margin="5dp"
-            android:textSize="@dimen/button_text_size"
-            android:layout_weight="@dimen/button_weight"
-            style="?android:attr/buttonBarButtonStyle"
-            android:text="@string/enter_id" />
-
     </LinearLayout>
 
-
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:textAlignment="center"
+        android:textColor="@color/contact_color"
+        android:text="Contact alice.nguyen@campus.lmu.de to report problems"/>
 </RelativeLayout>
