--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -94,5 +94,7 @@
         android:layout_alignParentBottom="true"
         android:textAlignment="center"
         android:textColor="@color/contact_color"
+        android:paddingBottom="5dp"
+        android:textSize="12sp"
         android:text="Contact alice.nguyen@campus.lmu.de to report problems"/>
 </RelativeLayout>
